--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -2,10 +2,8 @@
 FROM node:20-alpine AS frontend-builder
 
 WORKDIR /app/frontend
-
 COPY app/package*.json ./
 RUN npm ci --legacy-peer-deps || npm install --legacy-peer-deps
-
 COPY app/ ./
 RUN npm run build
 
@@ -13,15 +11,10 @@ RUN npm run build
 FROM python:3.11-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
-ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV FLASK_ENV=production
 
-RUN apt-get update && apt-get install -y \
-    gcc \
-    curl \
-    nginx \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y gcc curl && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -29,43 +22,17 @@ COPY app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app/ ./
-COPY --from=frontend-builder /app/frontend/dist /usr/share/nginx/html
-
 RUN mkdir -p uploads logs data
 
-# Nginx config
-RUN echo 'server { \
-    listen $PORT; \
-    root /usr/share/nginx/html; \
-    index index.html; \
-    \
-    location / { \
-        try_files $uri $uri/ /index.html; \
-    } \
-    \
-    location /api/ { \
-        proxy_pass http://127.0.0.1:5000/api/; \
-        proxy_set_header Host $host; \
-    } \
-    \
-    location /uploads/ { \
-        proxy_pass http://127.0.0.1:5000/uploads/; \
-    } \
-    \
-    location /publico/ { \
-        proxy_pass http://127.0.0.1:5000/publico/; \
-    } \
-}' > /etc/nginx/conf.d/default.conf
-
-# Start script
+# Create start script
 RUN echo '#!/bin/bash\n\
-echo "🚀 Starting JurisPocket..."\n\
 export PORT=${PORT:-8080}\n\
-sed -i "s/\$PORT/$PORT/g" /etc/nginx/conf.d/default.conf\n\
-echo "📡 Starting backend on port 5000..."\n\
-cd /app && gunicorn -w 2 -b 127.0.0.1:5000 --timeout 120 app:app &\n\
-sleep 5\n\
-echo "🌐 Starting nginx on port $PORT..."\n\
-nginx -g "daemon off;"' > /start.sh && chmod +x /start.sh
+echo "🚀 Starting on port $PORT"\n\
+exec gunicorn -w 4 -b 0.0.0.0:$PORT --timeout 120 app:app' > start.sh && chmod +x start.sh
 
-CMD ["/start.sh"]
+# Copy frontend build to Flask static folder
+COPY --from=frontend-builder /app/frontend/dist /app/static
+
+EXPOSE 8080
+
+CMD ["./start.sh"]
