--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -10,11 +10,10 @@ RUN npm run build
 # ============================================
 FROM python:3.11-slim
 
-ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONUNBUFFERED=1
 ENV FLASK_ENV=production
 
-RUN apt-get update && apt-get install -y gcc curl && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -24,15 +23,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY app/ ./
 RUN mkdir -p uploads logs data
 
-# Create start script
-RUN echo '#!/bin/bash\n\
-export PORT=${PORT:-8080}\n\
-echo "🚀 Starting on port $PORT"\n\
-exec gunicorn -w 4 -b 0.0.0.0:$PORT --timeout 120 app:app' > start.sh && chmod +x start.sh
-
-# Copy frontend build to Flask static folder
+# Copiar frontend buildado para pasta static
 COPY --from=frontend-builder /app/frontend/dist /app/static
 
+ENV PORT=8080
 EXPOSE 8080
 
-CMD ["./start.sh"]
+# Usar Flask direto (mais simples para debug)
+CMD ["python", "app.py"]
