--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,17 @@
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile.railway"
+builder = "NIXPACKS"
+
+[phases.build]
+cmds = [
+    "cd app && npm ci --legacy-peer-deps || npm install --legacy-peer-deps",
+    "cd app && npm run build",
+    "mkdir -p app/static && cp -r app/dist/* app/static/ 2>/dev/null || true"
+]
+
+[phases.setup]
+nixPkgs = ["python311", "nodejs_20"]
 
 [deploy]
-startCommand = ""
+startCommand = "cd app && python app.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
