--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -1,33 +1,72 @@
 # Dockerfile Railway - JurisPocket
-FROM node:20-alpine AS frontend-builder
-
-WORKDIR /app/frontend
-COPY app/package*.json ./
-RUN npm ci --legacy-peer-deps || npm install --legacy-peer-deps
-COPY app/ ./
-RUN npm run build
+# Build multi-estágio para frontend + backend
 
 # ============================================
-FROM python:3.11-slim
-
-ENV PYTHONUNBUFFERED=1
-ENV FLASK_ENV=production
-
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# ESTÁGIO 1: Build do Frontend (React + Vite)
+# ============================================
+FROM node:20-alpine AS frontend-builder
 
 WORKDIR /app
 
+# Copia apenas os arquivos necessários primeiro (cache eficiente)
+COPY app/package*.json ./
+
+# Instala dependências
+RUN npm ci --legacy-peer-deps 2>/dev/null || npm install --legacy-peer-deps
+
+# Copia o resto dos arquivos
+COPY app/ ./
+
+# Build do frontend (gera pasta dist/)
+RUN npm run build
+
+# ============================================
+# ESTÁGIO 2: Backend Python
+# ============================================
+FROM python:3.11-slim
+
+# Evita prompts do apt
+ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONUNBUFFERED=1
+ENV FLASK_ENV=production
+
+# Instala dependências do sistema
+RUN apt-get update && apt-get install -y \
+    curl \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
+# Diretório da aplicação
+WORKDIR /app
+
+# Copia requirements primeiro (cache eficiente)
 COPY app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copia o código do backend
 COPY app/ ./
-RUN mkdir -p uploads logs data
 
-# Copiar frontend buildado para pasta static
-COPY --from=frontend-builder /app/frontend/dist /app/static
+# Cria diretórios necessários
+RUN mkdir -p uploads logs data static
 
+# Copia o frontend buildado do estágio anterior
+COPY --from=frontend-builder /app/dist ./static
+
+# Expõe a porta (Railway usa a variável PORT)
 ENV PORT=8080
 EXPOSE 8080
 
-# Usar Flask direto (mais simples para debug)
-CMD ["python", "app.py"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8080/api/health || exit 1
+
+# Comando para iniciar usando Gunicorn (produção)
+# Usando 2 workers para economizar memória no Railway Hobby
+CMD gunicorn -w 2 -b 0.0.0.0:$PORT \
+    --access-logfile - \
+    --error-logfile - \
+    --timeout 120 \
+    --keep-alive 2 \
+    --max-requests 1000 \
+    --max-requests-jitter 50 \
+    app:app
