--- a/railway.toml
+++ b/railway.toml
@@ -1,2 +1,21 @@
+# Railway Configuration
+# Documentação: https://docs.railway.com/deploy/config-as-code
+
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile.railway"
+
+[deploy]
+# Número de réplicas (1 para Hobby plan)
+replicas = 1
+
+# Healthcheck endpoint
+healthcheckPath = "/api/health"
+healthcheckTimeout = 30
+
+# Porta exposta (deve bater com o EXPOSE do Dockerfile)
+port = 8080
+
+# Política de restart
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 3
