--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,8 +5,9 @@ python-dateutil==2.8.2
 Werkzeug==3.0.1
 requests==2.31.0
 APScheduler==3.10.4
-openai==1.6.0
+openai==1.12.0
 beautifulsoup4==4.12.2
 docxtpl==0.16.8
 python-docx==1.1.0
 gunicorn==21.2.0
+httpx==0.26.0
