Resolvendo alterações no whatsapp

--- a/.env.example
+++ b/.env.example
@@ -27,9 +27,9 @@ GROQ_API_KEY=sua-chave-groq
 # Número do time de vendas (com prefixo 55)
 WHATSAPP_VENDAS=5511999999999
 
-# Evolution API (para notificações WhatsApp)
-EVOLUTION_API_URL=http://evolution:8080
-EVOLUTION_API_KEY=chave-secreta-evolution
+# Microservico WhatsApp Web (Node.js + Baileys)
+WHATSAPP_MICROSERVICE_URL=http://whatsapp-service:3001
+WHATSAPP_MICROSERVICE_TOKEN=troque-essa-chave
 
 # -----------------------------------------------------------------------------
 # EMAIL (SMTP)
