--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -43,6 +43,8 @@ ENV FLASK_ENV=production
 RUN apt-get update && apt-get install -y \
     curl \
     gcc \
+    nodejs \
+    npm \
     && rm -rf /var/lib/apt/lists/*
 
 # Diretório da aplicação
@@ -52,11 +54,17 @@ WORKDIR /app
 COPY app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copia e instala o microservico WhatsApp (Node.js)
+COPY whatsapp-service/package*.json ./whatsapp-service/
+RUN cd whatsapp-service && npm install --omit=dev --legacy-peer-deps
+COPY whatsapp-service/src ./whatsapp-service/src
+COPY whatsapp-service/.env.example ./whatsapp-service/.env.example
+
 # Copia o código do backend
 COPY app/ ./
 
 # Cria diretórios necessários
-RUN mkdir -p uploads logs data static
+RUN mkdir -p uploads logs data static /app/data/whatsapp-sessions
 
 # Copia o frontend buildado do estágio anterior
 COPY --from=frontend-builder /app/dist ./static
@@ -65,6 +73,11 @@ COPY --from=frontend-builder /app/dist ./static
 ENV PORT=8080
 EXPOSE 8080
 
+# Configuração padrão do microserviço em produção single-service (Railway)
+ENV WHATSAPP_MICROSERVICE_URL=http://127.0.0.1:3001
+ENV WHATSAPP_SERVICE_PORT=3001
+ENV WHATSAPP_SESSIONS_DIR=/app/data/whatsapp-sessions
+
 # Health check - mais generoso para Railway
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=5 \
     CMD curl -f http://localhost:$PORT/api/health || exit 1
@@ -72,7 +85,8 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=5 \
 # Comando para iniciar usando Gunicorn (produção)
 # Usando 1 worker para economizar memória no Railway Hobby
 # O Railway já gerencia múltiplas réplicas se necessário
-CMD exec gunicorn -w 1 -b 0.0.0.0:$PORT \
+CMD sh -c "node /app/whatsapp-service/src/server.js & \
+    exec gunicorn -w 1 -b 0.0.0.0:$PORT \
     --access-logfile - \
     --error-logfile - \
     --timeout 120 \
@@ -80,4 +94,4 @@ CMD exec gunicorn -w 1 -b 0.0.0.0:$PORT \
     --max-requests 1000 \
     --max-requests-jitter 50 \
     --preload \
-    app:app
+    app:app"
