--- a/whatsapp-service/.env.example
+++ b/whatsapp-service/.env.example
@@ -12,6 +12,7 @@ WHATSAPP_SESSIONS_DIR=./sessions
 # Boas praticas anti-bloqueio
 WHATSAPP_MIN_DELAY_MS=1200
 WHATSAPP_MAX_DELAY_MS=2600
+WHATSAPP_MAX_RECONNECT_ATTEMPTS=8
 
 # Webhook opcional para mensagens recebidas
 # Exemplo: http://backend:5000/api/internal/whatsapp/inbound
