--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ WHATSAPP_VENDAS=5511999999999
 # Microservico WhatsApp Web (Node.js + Baileys)
 WHATSAPP_MICROSERVICE_URL=http://whatsapp-service:3001
 WHATSAPP_MICROSERVICE_TOKEN=troque-essa-chave
+WHATSAPP_PLATFORM_SESSION_KEY=platform
 
 # -----------------------------------------------------------------------------
 # EMAIL (SMTP)
