Tentando resolver esse caralho de whatsapp

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ WHATSAPP_VENDAS=5511999999999
 WHATSAPP_MICROSERVICE_URL=http://whatsapp-service:3001
 WHATSAPP_MICROSERVICE_TOKEN=troque-essa-chave
 WHATSAPP_PLATFORM_SESSION_KEY=platform
+WHATSAPP_ACK_WAIT_MS=12000
+WHATSAPP_ACK_POLL_MS=250
 
 # -----------------------------------------------------------------------------
 # EMAIL (SMTP)
