--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -63,6 +63,8 @@ services:
       - WHATSAPP_SESSIONS_DIR=/app/sessions
       - WHATSAPP_MIN_DELAY_MS=${WHATSAPP_MIN_DELAY_MS:-1200}
       - WHATSAPP_MAX_DELAY_MS=${WHATSAPP_MAX_DELAY_MS:-2600}
+      - WHATSAPP_ACK_WAIT_MS=${WHATSAPP_ACK_WAIT_MS:-12000}
+      - WHATSAPP_ACK_POLL_MS=${WHATSAPP_ACK_POLL_MS:-250}
       - WHATSAPP_INBOUND_WEBHOOK_URL=${WHATSAPP_INBOUND_WEBHOOK_URL:-http://backend:5000/api/internal/whatsapp/inbound}
       - WHATSAPP_INBOUND_WEBHOOK_SECRET=${WHATSAPP_INBOUND_WEBHOOK_SECRET:-}
     volumes:
