Eu não desistir, entao agora segura ai

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,11 @@ VITE_API_URL=https://seu-dominio.com.br/api
 # DATABASE (SQLite - não precisa configurar)
 # O banco será criado automaticamente em ./data/
 # -----------------------------------------------------------------------------
+DATABASE_PATH=/app/data/jurispocket.db
+
+# -----------------------------------------------------------------------------
+# PERSISTENCIA WHATSAPP
+# Use um diretório em volume persistente para evitar logout a cada deploy.
+# Exemplo Railway com volume: /data/whatsapp-sessions
+# -----------------------------------------------------------------------------
+WHATSAPP_SESSIONS_DIR=/app/data/whatsapp-sessions
