--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -74,9 +74,9 @@ ENV PORT=8080
 EXPOSE 8080
 
 # Configuração padrão do microserviço em produção single-service (Railway)
+ENV DATABASE_PATH=/app/data/jurispocket.db
 ENV WHATSAPP_MICROSERVICE_URL=http://127.0.0.1:3001
 ENV WHATSAPP_SERVICE_PORT=3001
-ENV WHATSAPP_SESSIONS_DIR=/app/data/whatsapp-sessions
 ENV WHATSAPP_MAX_RECONNECT_ATTEMPTS=8
 
 # Script de startup robusto para Railway
