Resolvendo erro no deploy

--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,10 @@ DATABASE_PATH=/app/data/jurispocket.db
 # Exemplo Railway com volume: /data/whatsapp-sessions
 # -----------------------------------------------------------------------------
 WHATSAPP_SESSIONS_DIR=/app/data/whatsapp-sessions
+
+# -----------------------------------------------------------------------------
+# JOBS EM BACKGROUND (APScheduler)
+# Se o deploy falhar no boot, desative temporariamente com "false"
+# para isolar problemas sem derrubar a API.
+# -----------------------------------------------------------------------------
+ENABLE_BACKGROUND_JOBS=true
