--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,8 @@ GROQ_API_KEY=sua-chave-groq
 # -----------------------------------------------------------------------------
 # Número do time de vendas (com prefixo 55)
 WHATSAPP_VENDAS=5511999999999
+# Frontend (Vite) usa essa variavel para links de upgrade em tela
+VITE_WHATSAPP_VENDAS=5511999999999
 
 # Microservico WhatsApp Web (Node.js + Baileys)
 WHATSAPP_MICROSERVICE_URL=http://whatsapp-service:3001
