--- a/.env.example
+++ b/.env.example
@@ -41,9 +41,14 @@ WHATSAPP_ACK_POLL_MS=250
 # -----------------------------------------------------------------------------
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=seu-email@gmail.com
+SMTP_USER=contato@jurispocket.com.br
 SMTP_PASS=sua-senha-de-app
-SMTP_FROM=seu-email@gmail.com
+SMTP_FROM=contato@jurispocket.com.br
+# URL pública da aplicação usada nos links dos emails
+APP_URL=https://seu-dominio.com.br
+# Verificação de email no cadastro (minutos e limite de tentativas)
+EMAIL_VERIFICATION_TTL_MINUTES=10
+EMAIL_VERIFICATION_MAX_ATTEMPTS=5
 
 # -----------------------------------------------------------------------------
 # URL DO SERVIDOR
