tentando corrigir email

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,8 @@ SMTP_PORT=587
 SMTP_USER=contato@jurispocket.com.br
 SMTP_PASS=sua-senha-de-app
 SMTP_FROM=contato@jurispocket.com.br
+# Timeout de conexão SMTP em segundos (evita travar requisições)
+SMTP_TIMEOUT_SECONDS=12
 # URL pública da aplicação usada nos links dos emails
 APP_URL=https://seu-dominio.com.br
 # Verificação de email no cadastro (minutos e limite de tentativas)
