--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,11 @@ SMTP_PASS=sua-senha-de-app
 SMTP_FROM=contato@jurispocket.com.br
 # Timeout de conexão SMTP em segundos (evita travar requisições)
 SMTP_TIMEOUT_SECONDS=12
+# Alternativa recomendada para Railway (envio por HTTPS, sem porta SMTP)
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxx
+RESEND_FROM=JurisPocket <no-reply@seu-dominio.com.br>
+RESEND_API_URL=https://api.resend.com/emails
+RESEND_TIMEOUT_SECONDS=12
 # URL pública da aplicação usada nos links dos emails
 APP_URL=https://seu-dominio.com.br
 # Verificação de email no cadastro (minutos e limite de tentativas)
