acho que o email nao vai rolar

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,8 @@ SMTP_PASS=sua-senha-de-app
 SMTP_FROM=contato@jurispocket.com.br
 # Timeout de conexão SMTP em segundos (evita travar requisições)
 SMTP_TIMEOUT_SECONDS=12
+# Força conexão SMTP por IPv4 (útil quando IPv6 não tem rota no host)
+SMTP_FORCE_IPV4=false
 # Alternativa recomendada para Railway (envio por HTTPS, sem porta SMTP)
 RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxx
 RESEND_FROM=JurisPocket <no-reply@seu-dominio.com.br>
