--- a/.env.example
+++ b/.env.example
@@ -55,9 +55,11 @@ RESEND_API_URL=https://api.resend.com/emails
 RESEND_TIMEOUT_SECONDS=12
 # URL pública da aplicação usada nos links dos emails
 APP_URL=https://seu-dominio.com.br
-# Verificação de email no cadastro (minutos e limite de tentativas)
-EMAIL_VERIFICATION_TTL_MINUTES=10
-EMAIL_VERIFICATION_MAX_ATTEMPTS=5
+# Notificações por email (deixe false para operar 100% via WhatsApp)
+ENABLE_EMAIL_NOTIFICATIONS=false
+# Verificação de cadastro via WhatsApp (minutos e limite de tentativas)
+REGISTRATION_VERIFICATION_TTL_MINUTES=10
+REGISTRATION_VERIFICATION_MAX_ATTEMPTS=5
 
 # -----------------------------------------------------------------------------
 # URL DO SERVIDOR
